# mailpass

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dfx.json  docker-compose.yml  package-lock.json  package.json
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/config/: default.yml
backend/src/: lib.rs  main.rs
backend/src/routes/: mod.rs
backend/src/services/: email_validator.rs  mail.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: Header.vue
frontend/src/router/: index.js
frontend/src/services/: index.js  mail.service.js
frontend/src/stores/: index.js
frontend/src/views/: Home.vue
frontend/src/views/users/: AddUser.vue
src/: lib.rs
