[package]
name = "mailpass"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/codaholichq/mailpass"
keywords = ["email", "smtp", "mx", "validation", "verification"]
categories = ["SaaS", "B2B"]
description = "A dApp that checks if an email address exists without sending a mail."
readme = "README.md"
authors = ["Emmy Steven"]
license = "MIT"

# [lib]
# crate-type = ["cdylib", "lib"]
# path = "src/api/mod.rs"


[dependencies]
anyhow = "1.0.86"
async-smtp = { version = "0.9.1" }
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = "0.4.38"
configured = "0.7.1"
humantime-serde = "1.1.1"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.39.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = { version = "0.5.0" }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
] }
trust-dns-resolver = "0.23.2"
